footer added + mobile spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    animation: slideLeft 1s;
+    animation: slideLeft 2s forwards;
     padding-left: 10%;
     padding-right: 10%;
     /*background-color: purple;*/
@@ -80,9 +80,17 @@
         transform: translateX(-100px);
         opacity: 0;
     }
-    80%{
+    50%{
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    90%{
         transform: translateX(0px);
-        opacity: 1;
+        opacity: 1 ;
+    }
+    100%{
+        transform: translateX(0px);
+        opacity: 1 !important ;
     }
 }
 
@@ -115,7 +123,7 @@
     padding-left: 10px;
 }
 
-.text{
+.icons-container a .text{
     visibility: hidden;
 }
 
@@ -156,40 +164,6 @@
     width: 100%;
     background-color: white;
 }
-
-/*.links{*/
-/*    background: black;*/
-/*    color: white;*/
-/*    width: 250px;*/
-/*    padding: 30px;*/
-/*    transform: rotateZ(-90deg);*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    position: absolute;*/
-/*    top: -90px;*/
-
-/*}*/
-
-/*#trasko .links, #portal .links, #youtube .links{*/
-/*    left: 0;*/
-/*}*/
-
-/*#mindwell .links, #denik .links, #dbs .links{*/
-/*    right: 0;*/
-/*}*/
-
-
-
-/*.links a{*/
-/*    font-family: Clash Display,sans-serif;*/
-/*    font-size: 60px;*/
-/*    font-weight: 400;*/
-/*}*/
-
-/*.links a:hover{*/
-/*    color: #FF5001;*/
-/*    cursor: pointer;*/
-/*}*/
 
 .portfolioItem{
     position: relative;
@@ -390,9 +364,41 @@
     transform: translateY(0);
 }
 
+.footer-container{
+    display: flex;
+    width: 80%;
+    min-height: 90px;
+    /*background-color: red;*/
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px 10%;
+}
 
 
+.footer-container a{
+    height: 20px;
+    padding: 10px;
+    /*margin: 15px;*/
+    display: flex;
+    /*width: 300px;*/
+    flex-direction: row;
+    align-items: center;
+    font-size: 15px;
+    color: black;
+    text-decoration: none;
+    /*background-color: #08BDBA;*/
+}
 
+.footer-container  .icon{
+    display: flex;
+}
+
+.footer-container  img{
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
+}
 
 
 
@@ -429,7 +435,7 @@
         padding-right: 20%;
 
     }
-    .text{
+    .icons-container a .text{
         display: none;
     }
 
@@ -533,7 +539,13 @@
     }
 
     .space{
-        height: 15px;
+        height: 100px;
+    }
+    .footer-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
     }
 
 }
@@ -568,7 +580,7 @@
         padding-left: 20%;
         padding-right: 20%;
     }
-    .text{
+    .icons-container a .text{
         display: none;
     }
     .icons-container a{
@@ -628,7 +640,7 @@
     }
 
     .space{
-        height: 30px;
+        height: 150px;
     }
 
 }
